--- a/index.html
+++ b/index.html
@@ -9,30 +9,88 @@
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
     #map { height: 90vh; width: 100%; }
     header { padding: 1rem; background: #0074D9; color: white; text-align: center; font-size: 1.5rem; }
+
+    #detail-panel {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background: white;
+      box-shadow: 0 -2px 10px rgba(0,0,0,0.3);
+      max-height: 50vh;
+      overflow-y: auto;
+      padding: 1rem;
+      display: none; /* Hidden by default */
+      z-index: 1000;
+    }
+
+    #detail-panel h2 {
+      margin-top: 0;
+    }
+
+    .link {
+      color: #0074D9;
+      text-decoration: underline;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
   <header>Chicago Happy Hours</header>
   <div id="map"></div>
+  <div id="detail-panel"></div>
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
   <script>
     // Initialize Map
-    const map = L.map('map').setView([41.8781, -87.6298], 12); // Centered on Chicago
+    const map = L.map('map').setView([41.8781, -87.6298], 12);
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
-    // Helper function to get the next day in the week
+    // Helper function
     function getNextDay(day) {
       const daysOfWeek = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
       const currentIndex = daysOfWeek.indexOf(day);
       return daysOfWeek[(currentIndex + 1) % 7];
     }
 
-    // Load CSV Data
+    function formatDays(daysAvailable) {
+      const daysArray = daysAvailable.split(',').map(day => day.trim());
+      let formattedDays = '';
+
+      for (let i = 0; i < daysArray.length; i++) {
+        const startDay = daysArray[i];
+        let endDay = startDay;
+        while (i + 1 < daysArray.length && getNextDay(daysArray[i]) === daysArray[i + 1]) {
+          endDay = daysArray[i + 1];
+          i++;
+        }
+        if (formattedDays) {
+          formattedDays += ', ';
+        }
+        formattedDays += (startDay !== endDay) ? `${startDay}-${endDay}` : startDay;
+      }
+      return formattedDays;
+    }
+
+    function showDetail(place) {
+      const panel = document.getElementById('detail-panel');
+      panel.innerHTML = `
+        <h2>${place.Venue}</h2>
+        <p><i>${place.Cuisine}</i></p>
+        <p><strong>Days:</strong> ${formatDays(place['Days Available'])}</p>
+        <p><strong>Happy Hour:</strong> ${place['Happy Hour Start']} - ${place['Happy Hour End']}</p>
+        <p><strong>Specialty:</strong> ${place.Specialty}</p>
+        <p><strong>Price Highlights:</strong> ${place['Price Highlights'] || 'N/A'}</p>
+        <p><strong>Menu:</strong> <a href="${place['Menu Link']}" target="_blank" class="link">Menu</a></p>
+        <p><strong>Maps Menu:</strong> <a href="${place['Maps Menu']}" target="_blank" class="link">Maps Menu</a></p>
+        <p><strong>Notes:</strong> ${place.Notes || 'None'}</p>
+      `;
+      panel.style.display = 'block';
+    }
+
     Papa.parse('https://raw.githubusercontent.com/wodziaka/HAPPY-hour/refs/heads/main/HAPPY%20hour.csv', {
       download: true,
       header: true,
@@ -41,41 +99,10 @@
 
         data.forEach(place => {
           if (place.Latitude && place.Longitude) {
-            // Format the Days Available into a range
-            const daysArray = place['Days Available'].split(',').map(day => day.trim());
-            let formattedDays = '';
-
-            // Check for continuous sequences of days
-            for (let i = 0; i < daysArray.length; i++) {
-              const startDay = daysArray[i];
-              let endDay = startDay;
-
-              // Continue adding days if they are consecutive
-              while (i + 1 < daysArray.length && getNextDay(daysArray[i]) === daysArray[i + 1]) {
-                endDay = daysArray[i + 1];
-                i++;
-              }
-
-              if (formattedDays) {
-                formattedDays += ', ';
-              }
-
-              // If the range is more than 1 day, use a dash
-              if (startDay !== endDay) {
-                formattedDays += `${startDay}-${endDay}`;
-              } else {
-                formattedDays += startDay;
-              }
-            }
-
-            // Add Marker with Popup
-            L.marker([parseFloat(place.Latitude), parseFloat(place.Longitude)])
+            const marker = L.marker([parseFloat(place.Latitude), parseFloat(place.Longitude)])
               .addTo(map)
-              .bindPopup(`<b>${place.Venue}</b><br>
-                          <i>${place.Cuisine}</i><br>
-                          ${formattedDays}<br>
-                          ${place['Happy Hour Start']} - ${place['Happy Hour End']}<br>
-                          Specialty: ${place.Specialty}`);
+              .bindPopup(`<b>${place.Venue}</b><br><i>${place.Cuisine}</i><br>${formatDays(place['Days Available'])}`)
+              .on('click', () => showDetail(place));
           }
         });
       }
