--- a/index.html
+++ b/index.html
@@ -16,40 +16,62 @@
       width: 100%;
       background: white;
       box-shadow: 0 -2px 10px rgba(0,0,0,0.3);
-      max-height: 50vh;
+      max-height: 60vh;
       overflow-y: auto;
       padding: 1rem;
-      display: none; /* Hidden by default */
+      display: none;
       z-index: 1000;
+      transition: transform 0.3s ease;
     }
 
     #detail-panel h2 {
       margin-top: 0;
     }
 
-    .link {
+    .button-link {
+      display: inline-block;
+      background-color: #0074D9;
+      color: white;
+      padding: 5px 10px;
+      margin-top: 5px;
+      border-radius: 5px;
+      cursor: pointer;
+      text-align: center;
+      font-size: 0.9rem;
+      text-decoration: none;
+    }
+
+    .close-button {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      font-size: 1.5rem;
+      color: #333;
+      cursor: pointer;
+    }
+
+    a {
       color: #0074D9;
       text-decoration: underline;
-      cursor: pointer;
     }
   </style>
 </head>
 <body>
   <header>Chicago Happy Hours</header>
   <div id="map"></div>
-  <div id="detail-panel"></div>
+  <div id="detail-panel">
+    <span class="close-button" onclick="closeDetailPanel()">×</span>
+  </div>
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
   <script>
-    // Initialize Map
     const map = L.map('map').setView([41.8781, -87.6298], 12);
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
-    // Helper function
     function getNextDay(day) {
       const daysOfWeek = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
       const currentIndex = daysOfWeek.indexOf(day);
@@ -78,17 +100,22 @@
     function showDetail(place) {
       const panel = document.getElementById('detail-panel');
       panel.innerHTML = `
+        <span class="close-button" onclick="closeDetailPanel()">×</span>
         <h2>${place.Venue}</h2>
         <p><i>${place.Cuisine}</i></p>
         <p><strong>Days:</strong> ${formatDays(place['Days Available'])}</p>
         <p><strong>Happy Hour:</strong> ${place['Happy Hour Start']} - ${place['Happy Hour End']}</p>
         <p><strong>Specialty:</strong> ${place.Specialty}</p>
         <p><strong>Price Highlights:</strong> ${place['Price Highlights'] || 'N/A'}</p>
-        <p><strong>Menu:</strong> <a href="${place['Menu Link']}" target="_blank" class="link">Menu</a></p>
-        <p><strong>Maps Menu:</strong> <a href="${place['Maps Menu']}" target="_blank" class="link">Maps Menu</a></p>
+        <p><strong>Menu:</strong> <a href="${place['Menu Link']}" target="_blank">Menu</a></p>
+        <p><strong>Maps Menu:</strong> <a href="${place['Maps Menu']}" target="_blank">Maps Menu</a></p>
         <p><strong>Notes:</strong> ${place.Notes || 'None'}</p>
       `;
       panel.style.display = 'block';
+    }
+
+    function closeDetailPanel() {
+      document.getElementById('detail-panel').style.display = 'none';
     }
 
     Papa.parse('https://raw.githubusercontent.com/wodziaka/HAPPY-hour/refs/heads/main/HAPPY%20hour.csv', {
@@ -97,14 +124,23 @@
       complete: function(results) {
         const data = results.data;
 
-        data.forEach(place => {
+        data.forEach((place, index) => {
           if (place.Latitude && place.Longitude) {
             const marker = L.marker([parseFloat(place.Latitude), parseFloat(place.Longitude)])
               .addTo(map)
-              .bindPopup(`<b>${place.Venue}</b><br><i>${place.Cuisine}</i><br>${formatDays(place['Days Available'])}`)
-              .on('click', () => showDetail(place));
+              .bindPopup(`
+                <b>${place.Venue}</b><br>
+                <i>${place.Cuisine}</i><br>
+                ${formatDays(place['Days Available'])}<br>
+                <div class="button-link" onclick="showDetailFromPopup(${index})">More Info</div>
+              `);
           }
         });
+
+        window.showDetailFromPopup = function(index) {
+          const place = data[index];
+          showDetail(place);
+        }
       }
     });
   </script>
