--- a/index.html
+++ b/index.html
@@ -6,52 +6,70 @@
   <title>Chicago Happy Hour</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    #map { height: 90vh; width: 100%; }
-    header { padding: 1rem; background: #6860fc; color: white; text-align: center; font-size: 1.5rem; }
-
+    body { 
+      font-family: 'Poppins', Arial, sans-serif; 
+      margin: 0; 
+      padding: 0; 
+      background-color: #fcf8cc; /* pale yellow */
+    }
+    #map { 
+      height: 90vh; 
+      width: 100%; 
+    }
+    header { 
+      padding: 1rem; 
+      background: #ec2453; /* hot pink */
+      color: white; 
+      text-align: center; 
+      font-size: 1.8rem; 
+      font-weight: bold;
+      letter-spacing: 1px;
+    }
     #detail-panel {
       position: fixed;
       bottom: 0;
       width: 100%;
-      background: white;
+      background: #ffffff; /* white panel */
       box-shadow: 0 -2px 10px rgba(0,0,0,0.3);
       max-height: 60vh;
       overflow-y: auto;
       padding: 1rem;
       display: none;
       z-index: 1000;
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
       transition: transform 0.3s ease;
     }
-
     #detail-panel h2 {
       margin-top: 0;
+      color: #ec2453; /* hot pink titles */
     }
-
     .button-link {
       display: inline-block;
-      background-color: #0074D9;
+      background-color: #89cbc7; /* turquoise button */
       color: white;
-      padding: 5px 10px;
-      margin-top: 5px;
-      border-radius: 5px;
+      padding: 8px 14px;
+      margin-top: 8px;
+      border-radius: 8px;
       cursor: pointer;
       text-align: center;
-      font-size: 0.9rem;
+      font-size: 1rem;
       text-decoration: none;
+      transition: background-color 0.3s ease;
     }
-
+    .button-link:hover {
+      background-color: #fbb61d; /* orange on hover */
+    }
     .close-button {
       position: absolute;
       top: 10px;
       right: 15px;
-      font-size: 1.5rem;
-      color: #333;
+      font-size: 1.8rem;
+      color: #ec2453;
       cursor: pointer;
     }
-
     a {
-      color: #0074D9;
+      color: #ec2453; /* links hot pink */
       text-decoration: underline;
     }
   </style>
