--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       position: fixed;
       bottom: 0;
       width: 100%;
-      background: #ffffff; /* white panel */
+      background: #fcf8cc; /* pale yellow */
       box-shadow: 0 -2px 10px rgba(0,0,0,0.3);
       max-height: 60vh;
       overflow-y: auto;
@@ -71,6 +71,10 @@
     a {
       color: #ec2453; /* links hot pink */
       text-decoration: underline;
+    }
+    .leaflet-popup-content-wrapper, .leaflet-popup-tip {
+      background: #fff8dc; /* Pale yellow */
+      color: #333; /* (Optional) Make sure text stays readable */
     }
   </style>
 </head>
