--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
     header { 
       padding: 1rem; 
-      background: #ec2453; /* hot pink */
+      background: #89cbc7; /* turquoise */
       color: white; 
       text-align: center; 
       font-size: 1.8rem; 
@@ -46,7 +46,7 @@
     }
     .button-link {
       display: inline-block;
-      background-color: #89cbc7; /* turquoise button */
+      background-color: #ec2453; /* hot pink button */
       color: white;
       padding: 8px 14px;
       margin-top: 8px;
