--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     }
     .button-link {
       display: inline-block;
-      background-color: #ec2453; /* hot pink button */
+      background-color: #fbb61d; /* orange button */
       color: white;
       padding: 8px 14px;
       margin-top: 8px;
@@ -58,7 +58,7 @@
       transition: background-color 0.3s ease;
     }
     .button-link:hover {
-      background-color: #fbb61d; /* orange on hover */
+      background-color: #ec2453; /* hot pink on hover */
     }
     .close-button {
       position: absolute;
@@ -73,7 +73,7 @@
       text-decoration: underline;
     }
     .leaflet-popup-content-wrapper, .leaflet-popup-tip {
-      background: #fff8dc; /* Pale yellow */
+      background: #fcf8cc; /* Pale yellow */
       color: #333; /* (Optional) Make sure text stays readable */
     }
   </style>
