--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       font-family: 'Poppins', Arial, sans-serif; 
       margin: 0; 
       padding: 0; 
-      background-color: #fcf8cc; /* pale yellow */
+      background-color: #fff8dc; /* pale yellow */
     }
     #map { 
       height: 90vh; 
@@ -64,16 +64,17 @@
       position: absolute;
       top: 10px;
       right: 15px;
-      font-size: 1.8rem;
+      font-size: 2rem;
       color: #ec2453;
       cursor: pointer;
+      font-weight: bold;
     }
     a {
       color: #ec2453; /* links hot pink */
       text-decoration: underline;
     }
     .leaflet-popup-content-wrapper, .leaflet-popup-tip {
-      background: #fcf8cc; /* Pale yellow */
+      background: #fff8dc; /* Pale yellow */
       color: #333; /* (Optional) Make sure text stays readable */
     }
   </style>
