--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       background: #89cbc7; /* turquoise */
       color: white; 
       text-align: center; 
+      font-family: 'Tangerine', serif;
       font-size: 1.8rem; 
       font-weight: bold;
       letter-spacing: 1px;
