--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       position: fixed;
       bottom: 0;
       width: 100%;
-      background: #fcf8cc; /* pale yellow */
+      background: #fdf8dc; /* pale yellow */
       box-shadow: 0 -2px 10px rgba(0,0,0,0.3);
       max-height: 60vh;
       overflow-y: auto;
