--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       background: #89cbc7; /* turquoise */
       color: white; 
       text-align: center; 
-      font-family: 'Tangerine', serif;
+      font-family: 'Tangerine';
       font-size: 1.8rem; 
       letter-spacing: 1px;
     }
