--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       color: white; 
       text-align: center; 
       font-family: 'Tangerine';
-      font-size: 1.8rem; 
+      font-size: 48px; 
       letter-spacing: 1px;
     }
     #detail-panel {
