--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chicago Happy Hour</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body { 
       font-family: 'Poppins', Arial, sans-serif; 
@@ -22,7 +23,7 @@
       color: white; 
       text-align: center; 
       font-family: 'Tangerine';
-      font-size: 48px; 
+      font-size: 1.8rem; 
       letter-spacing: 1px;
     }
     #detail-panel {
