--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       color: white; 
       text-align: center; 
       font-family: 'Tangerine';
-      font-size: 1.8rem; 
+      font-size: 48px; 
       letter-spacing: 1px;
     }
     #detail-panel {
@@ -84,7 +84,7 @@
   <header>Chicago Happy Hours</header>
   <div id="map"></div>
   <div id="detail-panel">
-    <span class="close-button" onclick="closeDetailPanel()">×</span>
+    <!-- The close button will be appended dynamically -->
   </div>
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
