--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       background: #89cbc7; /* turquoise */
       color: white; 
       text-align: center; 
-      font-family: 'Tangerine';
-      font-size: 48px; 
+      font-family: 'Ingrid Darling';
+      font-size: 50px; 
       letter-spacing: 1px;
     }
     #detail-panel {
