--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chicago Happy Hour</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <link href='https://fonts.googleapis.com/css?family=Ingrid Darling' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body { 
@@ -44,6 +45,7 @@
     #detail-panel h2 {
       margin-top: 0;
       color: #ec2453; /* hot pink titles */
+      font-family: 'Tangerine', serif;
     }
     .button-link {
       display: inline-block;
