--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       color: #ec2453;
       cursor: pointer;
       font-weight: bold;
+      z-index: 1050;
     }
     a {
       color: #ec2453; /* links hot pink */
