--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     }
     #detail-panel h2 {
       margin-top: 0;
-      color: #ec2453; /* hot pink titles */
+      color: #ed245d; /* hot pink titles */
       font-family: 'Tangerine', serif;
     }
     .button-link {
@@ -61,14 +61,14 @@
       transition: background-color 0.3s ease;
     }
     .button-link:hover {
-      background-color: #ec2453; /* hot pink on hover */
+      background-color: #ed245d; /* hot pink on hover */
     }
     .close-button {
       position: absolute;
       top: 10px;
       right: 15px;
       font-size: 2rem;
-      color: #ec2453;
+      color: #ed245d;
       cursor: pointer;
       font-weight: bold;
       z-index: 1050;
