--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chicago Happy Hour</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <link href='https://fonts.googleapis.com/css?family=Ingrid Darling' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body { 
@@ -23,7 +22,7 @@
       background: #89cbc7; /* turquoise */
       color: white; 
       text-align: center; 
-      font-family: 'Ingrid Darling';
+      font-family: 'Tangerine', serif;
       font-size: 55px; 
       letter-spacing: 1px;
     }
@@ -46,7 +45,8 @@
       margin-top: 0;
       color: #ed245d; /* hot pink titles */
       font-family: 'Tangerine', serif;
-      font-size: 30px;
+      font-size: 45px;
+      padding: 5px;
     }
     .button-link {
       display: inline-block;
@@ -88,7 +88,7 @@
   <header>Chicago Happy Hours</header>
   <div id="map"></div>
   <div id="detail-panel">
-    <!-- The close button will be appended dynamically -->
+    <button class="close-button" onclick="closeDetailPanel()">Close</button>
   </div>
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
@@ -128,7 +128,7 @@
     function showDetail(place) {
       const panel = document.getElementById('detail-panel');
       panel.innerHTML = `
-        <span class="close-button" onclick="closeDetailPanel()">×</span>
+        <button class="close-button" onclick="closeDetailPanel()">Close</button>
         <h2>${place.Venue}</h2>
         <p><i>${place.Cuisine}</i></p>
         <p><strong>Days:</strong> ${formatDays(place['Days Available'])}</p>
