--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     }
     #detail-panel h2 {
       margin-top: 0;
-      color: #ed245d; /* hot pink titles */
+      color: #ed2868; /* hot pink titles */
       font-family: 'Tangerine', serif;
       font-size: 45px;
       padding: 1px;
@@ -62,7 +62,7 @@
       transition: background-color 0.3s ease;
     }
     .button-link:hover {
-      background-color: #ed245d; /* hot pink on hover */
+      background-color: #ed2868; /* hot pink on hover */
     }
     .close-button {
       position: absolute;
@@ -71,13 +71,13 @@
       font-size: 2rem;
       color: #white;
       background-color: #89cbc7;
-      border-color: #ed245d;
+      border-color: #ed2868;
       cursor: pointer;
       font-weight: bold;
       z-index: 1050;
     }
     a {
-      color: #ec2453; /* links hot pink */
+      color: #ed2868; /* links hot pink */
       text-decoration: underline;
     }
     .leaflet-popup-content-wrapper, .leaflet-popup-tip {
