--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     .close-button {
       position: absolute;
       top: 10px;
-      right: 15px;
+      right: 10px;
       font-size: 2rem;
-      color: #white;
+      color: white;
       background-color: #89cbc7;
       border-color: #ed2868;
       cursor: pointer;
