--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     .close-button {
       position: absolute;
       top: 10px;
-      right: 25px;
+      right: 35px;
       font-size: 2rem;
       color: white;
       background-color: #89cbc7;
@@ -76,6 +76,9 @@
       cursor: pointer;
       font-weight: bold;
       z-index: 1050;
+    }
+    .close_button:hover {
+      background-color: #fbb61d;
     }
     a {
       color: #ed2868; /* links hot pink */
