--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     .close-button {
       position: absolute;
       top: 10px;
-      right: 35px;
+      right: 45px;
       font-size: 2rem;
       color: white;
       background-color: #89cbc7;
@@ -78,6 +78,7 @@
       z-index: 1050;
     }
     .close_button:hover {
+      z-index: 1050;
       background-color: #fbb61d;
     }
     a {
