--- a/index.html
+++ b/index.html
@@ -72,14 +72,11 @@
       font-size: 2rem;
       color: white;
       background-color: #89cbc7;
-      border-color: #ed2868;
+      border-color: #fbb61d;
+      border-weight: 3px;
       cursor: pointer;
       font-weight: bold;
       z-index: 1050;
-    }
-    .close_button:hover {
-      z-index: 1050;
-      background-color: #fbb61d;
     }
     a {
       color: #ed2868; /* links hot pink */
