--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       font-family: 'Ingrid Darling', serif;
       font-size: 55px; 
       letter-spacing: 1px;
+      border-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/wavy-border.svg') 30 round;
+      border-radius: 25px;
+      margin: 10px;
     }
     #detail-panel {
       position: fixed;
@@ -68,12 +71,12 @@
     .close-button {
       position: absolute;
       top: 10px;
-      right: 45px;
+      right: 40px;
       font-size: 2rem;
       color: white;
       background-color: #89cbc7;
       border-color: #fbb61d;
-      border-weight: 6px;
+      border-width: 5px;
       cursor: pointer;
       font-weight: bold;
       z-index: 1050;
