--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       letter-spacing: 1px;
       border: 20px solid transparent; /* Needed to make room for the image borders */
       border-image: url('https://static.vecteezy.com/system/resources/thumbnails/026/977/258/small/border-frame-minimal-free-png.png') 30 round;
+      border-image-slice: 30;
+      border-image-repeat: repeat;
       border-color: #ed2868;
       border-radius: 25px;
       margin: 10px;
@@ -55,6 +57,7 @@
       padding: 1px;
     }
     #detail-panel img.detail-image {
+      float: right;
       display: block;
       margin: 30px auto 10px 20px; /* top right bottom left */
       width: 240px;
