--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
       font-family: 'Ingrid Darling', serif;
       font-size: 55px; 
       letter-spacing: 1px;
-      border: 20px solid transparent; /* Needed to make room for the image borders */
-      border-image: url('https://static.vecteezy.com/system/resources/thumbnails/026/977/258/small/border-frame-minimal-free-png.png') 30 round;
-      border-image-slice: 30;
-      border-image-repeat: repeat;
+      border: 15px solid;
       border-color: #ed2868;
       border-radius: 25px;
       margin: 10px;
