--- a/index.html
+++ b/index.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Chicago Happy Hour</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Ingrid Darling' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Ingrid+Darling" rel="stylesheet" />
   <style>
-    body { 
-      font-family: 'Poppins', Arial, sans-serif; 
-      margin: 0; 
-      padding: 0; 
-      background-color: #fff8dc; /* pale yellow */
+    body {
+      font-family: 'Poppins', Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #fff8dc;
     }
-    #map { 
-      height: 90vh; 
-      width: 100%; 
+    #map {
+      height: 90vh;
+      width: 100%;
     }
-    header { 
-      padding: 1rem; 
-      background: #89cbc7; /* turquoise */
-      color: white; 
-      text-align: center; 
+    header {
+      position: relative;
+      padding: 1rem;
+      background: #89cbc7;
+      color: white;
+      text-align: center;
       font-family: 'Ingrid Darling', serif;
-      font-size: 55px; 
+      font-size: 55px;
       letter-spacing: 1px;
-      border: 15px solid;
-      border-color: #ed2868;
-      border-radius: 25px;
-      margin: 10px;
+    }
+    header img {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      height: 60px;
     }
     #detail-panel {
       position: fixed;
       bottom: 0;
       width: 100%;
-      background: #fdf8dc; /* pale yellow */
+      background: #fdf8dc;
       box-shadow: 0 -2px 10px rgba(0,0,0,0.3);
       max-height: 60vh;
       overflow-y: auto;
@@ -48,7 +51,7 @@
     }
     #detail-panel h2 {
       margin-top: 0;
-      color: #ed2868; /* hot pink titles */
+      color: #ed2868;
       font-family: 'Tangerine', serif;
       font-size: 45px;
       padding: 1px;
@@ -56,12 +59,12 @@
     #detail-panel img.detail-image {
       float: right;
       display: block;
-      margin: 30px auto 10px 20px; /* top right bottom left */
+      margin: 30px auto 10px 20px;
       width: 240px;
-    }    
+    }
     .button-link {
       display: inline-block;
-      background-color: #fbb61d; /* orange button */
+      background-color: #fbb61d;
       color: white;
       padding: 8px 14px;
       margin-top: 8px;
@@ -73,7 +76,7 @@
       transition: background-color 0.3s ease;
     }
     .button-link:hover {
-      background-color: #ed2868; /* hot pink on hover */
+      background-color: #ed2868;
     }
     .close-button {
       position: absolute;
@@ -82,24 +85,28 @@
       font-size: 2rem;
       color: white;
       background-color: #89cbc7;
-      border-color: #fbb61d;
-      border-width: 5px;
+      border: 5px solid #fbb61d;
       cursor: pointer;
       font-weight: bold;
       z-index: 1050;
     }
     a {
-      color: #ed2868; /* links hot pink */
+      color: #ed2868;
       text-decoration: underline;
     }
-    .leaflet-popup-content-wrapper, .leaflet-popup-tip {
-      background: #fff8dc; /* Pale yellow */
-      color: #333; /* (Optional) Make sure text stays readable */
+    .leaflet-popup-content-wrapper,
+    .leaflet-popup-tip {
+      background: #fff8dc;
+      color: #333;
     }
   </style>
 </head>
 <body>
-  <header>Chicago Happy Hours</header>
+  <header>
+    Chicago Happy Hours
+    <img src="https://github.com/wodziaka/HAPPY-hour/blob/main/sun.png?raw=true" alt="Sun Icon" />
+  </header>
+
   <div id="map"></div>
   <div id="detail-panel">
     <button class="close-button" onclick="closeDetailPanel()">x</button>
@@ -123,7 +130,6 @@
     function formatDays(daysAvailable) {
       const daysArray = daysAvailable.split(',').map(day => day.trim());
       let formattedDays = '';
-
       for (let i = 0; i < daysArray.length; i++) {
         const startDay = daysArray[i];
         let endDay = startDay;
@@ -131,9 +137,7 @@
           endDay = daysArray[i + 1];
           i++;
         }
-        if (formattedDays) {
-          formattedDays += ', ';
-        }
+        if (formattedDays) formattedDays += ', ';
         formattedDays += (startDay !== endDay) ? `${startDay}-${endDay}` : startDay;
       }
       return formattedDays;
@@ -169,7 +173,7 @@
 
         data.forEach((place, index) => {
           if (place.Latitude && place.Longitude) {
-            const marker = L.marker([parseFloat(place.Latitude), parseFloat(place.Longitude)])
+            L.marker([+place.Latitude, +place.Longitude])
               .addTo(map)
               .bindPopup(`
                 <b>${place.Venue}</b><br>
@@ -181,8 +185,7 @@
         });
 
         window.showDetailFromPopup = function(index) {
-          const place = data[index];
-          showDetail(place);
+          showDetail(data[index]);
         }
       }
     });
