--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <body>
   <header>
     Chicago Happy Hours
-    <img src="https://github.com/wodziaka/HAPPY-hour/blob/main/sun.png?raw=true" alt="Sun Icon" />
+    <img src="https://github.com/wodziaka/HAPPY-hour/blob/main/butterfly.png?raw=true" alt="butterfly" />
   </header>
 
   <div id="map"></div>
