--- a/index.html
+++ b/index.html
@@ -50,11 +50,10 @@
       transition: transform 0.3s ease;
     }
     #detail-panel h2 {
-      margin-top: 0;
+      margin-top: 20px;
       color: #ed2868;
       font-family: 'Tangerine', serif;
       font-size: 45px;
-      padding: 1px;
     }
     #detail-panel img.detail-image {
       float: right;
@@ -86,6 +85,7 @@
       color: white;
       background-color: #89cbc7;
       border: 5px solid #fbb61d;
+      border-radius: 25px;
       cursor: pointer;
       font-weight: bold;
       z-index: 1050;
@@ -104,7 +104,7 @@
 <body>
   <header>
     Chicago Happy Hours
-    <img src="https://github.com/wodziaka/HAPPY-hour/blob/main/sun.png?raw=true" />
+    <img src="https://raw.githubusercontent.com/wodziaka/HAPPY-hour/refs/heads/main/sun.bmp" />
   </header>
 
   <div id="map"></div>
