--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <body>
   <header>
     Chicago Happy Hours
-    <img src="https://raw.githubusercontent.com/wodziaka/HAPPY-hour/refs/heads/main/sun.bmp" />
+    <img src="https://github.com/wodziaka/HAPPY-hour/blob/main/sun.png?raw=true" />
   </header>
 
   <div id="map"></div>
