--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 </head>
 <body>
   <header>
+    <img src="https://github.com/wodziaka/HAPPY-hour/blob/main/moon.png?raw=true" />
     Chicago Happy Hours
     <img src="https://github.com/wodziaka/HAPPY-hour/blob/main/sun.png?raw=true" />
   </header>
