--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 </head>
 <body>
   <header>
-    <img src="https://github.com/wodziaka/HAPPY-hour/blob/main/sun.png?raw=true" />
+    <img src="https://github.com/wodziaka/HAPPY-hour/blob/main/sun.png?raw=true" class="header-icon left" alt="Sun"/>
     Chicago Happy Hours
-    <img src="https://github.com/wodziaka/HAPPY-hour/blob/main/moon.png?raw=true" />
+    <img src="https://github.com/wodziaka/HAPPY-hour/blob/main/moon.png?raw=true" class="header-icon right" alt="Moon"/>
   </header>
 
   <div id="map"></div>
