--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 1rem;
+      padding: 1rem 2rem;
       background: #89cbc7;
       color: white;
       font-family: 'Ingrid Darling', serif;
       font-size: 55px;
+      height: 90px;
       letter-spacing: 1px;
     }
     .header-icon {
