--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 1rem 2rem;
+      padding: 1rem 2rem .2rem;
       background: #89cbc7;
       color: white;
       font-family: 'Ingrid Darling', serif;
       font-size: 55px;
-      height: 90px;
+      height: 100px;
       letter-spacing: 1px;
     }
     .header-icon {
-      height: 75px;
+      height: 80px;
       width: auto;
     }
 
@@ -41,6 +41,8 @@
 
     .header-icon.right {
       margin-left: auto;
+      margin-top: 10px;
+      height: 85px;
     }
     .header-title {
       flex-grow: 1;
