--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 1rem 2rem .2rem;
+      padding: 1.1rem 2rem 0rem;
       background: #89cbc7;
       color: white;
       font-family: 'Ingrid Darling', serif;
@@ -42,6 +42,7 @@
     .header-icon.right {
       margin-left: auto;
       margin-top: 10px;
+      margin-bottom: 0px;
       height: 85px;
     }
     .header-title {
