--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 1.1rem 2rem 0rem;
+      padding: .7rem 2rem 0rem;
       background: #89cbc7;
       color: white;
       font-family: 'Ingrid Darling', serif;
@@ -31,7 +31,7 @@
       letter-spacing: 1px;
     }
     .header-icon {
-      height: 80px;
+      height: 75px;
       width: auto;
     }
 
@@ -42,7 +42,7 @@
 
     .header-icon.right {
       margin-left: auto;
-      margin-top: 17px;
+      margin-top: 15px;
       margin-bottom: 0px;
       height: 85px;
     }
